added the links on social webs

--- a/index.html
+++ b/index.html
@@ -23,35 +23,35 @@
     <!-- ilim -->
     <header>
         <div class="container">
-           <div class="header">
-            <div class="header_main flex">
-                <div class="header_logo">
-                    <img src="./img/header_logo.png" alt="">
-                </div>
-                <nav>
-                    <ul class="header_list flex">
-                        <li>
-                            <a href="#">MENU</a>
-                        </li>
-                        <li>
-                            <a href="#">CONTACT US</a>
-                        </li>
-                        <li>
-                            <a href="#">RESOURCES</a>
-                        </li>
-                        <li>
-                            <a href="#">MORE</a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="header_btns flex">
-                    <a class="btn header_btn" target="_blank" href=".//SignUp/sign.html">SIGN UP</a>
-                    <!-- <button   class="btn header_btn">SIGN UP</button> -->
-                    <a href="donate_page.html" target="_blank"> <button class="btn header_btner">DONATE</button></a>
+            <div class="header">
+                <div class="header_main flex">
+                    <div class="header_logo">
+                        <img src="./img/header_logo.png" alt="">
+                    </div>
+                    <nav>
+                        <ul class="header_list flex">
+                            <li>
+                                <a href="#">MENU</a>
+                            </li>
+                            <li>
+                                <a href="#">CONTACT US</a>
+                            </li>
+                            <li>
+                                <a href="#">RESOURCES</a>
+                            </li>
+                            <li>
+                                <a href="#">MORE</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="header_btns flex">
+                        <a class="btn header_btn" target="_blank" href=".//SignUp/sign.html">SIGN UP</a>
+                        <!-- <button   class="btn header_btn">SIGN UP</button> -->
+                        <a href="donate_page.html" target="_blank"> <button class="btn header_btner">DONATE</button></a>
 
+                    </div>
                 </div>
             </div>
-           </div>
         </div>
     </header>
     <div class="app">
@@ -216,11 +216,11 @@
     </section>
 
     <!-- amal -->
-<section>
-    <div class="container-sm reveal">
-        <div class="slider">
-          
-          <!-- 
+    <section>
+        <div class="container-sm reveal">
+            <div class="slider">
+
+                <!-- 
             <div
             class="item"
             style="background-image: url('./assets/images/slide-1.jpg')"
@@ -230,16 +230,16 @@
               <div class="description">Descripción del lugar</div>
             </div>
           </div> -->
-          <!-- <div class="buttons">
+                <!-- <div class="buttons">
             <button> Prev</button>
             <button> Next</button>
           </div> -->
-  
-  
-  
+
+
+
+            </div>
         </div>
-      </div>
-</section>
+    </section>
 
     <footer class="footer">
         <div class="container reveal">
@@ -252,22 +252,27 @@
                 </div>
                 <div class="apps">
                     <ul class="container-md reveal">
-                        <li class="links"><a href="#" class="link"><i class="fa fa-telegram"></i></a></li>
-                        <li class="links"><a href="#" class="link"><i class="fa fa-instagram"></i></a></li>
-                        <li class="links"><a href="#" class="link"><i class="fa fa-phone"></i></a></li>
+                        <li class="links"><a href="https://t.me/But4e_r" class="link" target="_blank"><i class="fa fa-telegram"></i></a></li>
+                        <li class="links"><a
+                                href="https://www.instagram.com/clarklymitten_27?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"
+                                class="link" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                        <li class="links"><a href="https://api.whatsapp.com/send?phone=998858132" class="link" target="_blank"><i
+                                    class="fa fa-phone"></i></a></li>
                         <li class="links"><a href="#" class="link"><i class="fa fa-linkedin"></i></a></li>
-                        <li class="links"><a href="#" class="link"><i class="fa fa-github"></i></a></li>
-                      </ul>
+                        <li class="links"><a href="https://github.com/AmalCM27" class="link" target="_blank"><i
+                                    class="fa fa-github"></i></a></li>
+                    </ul>
                 </div>
             </div>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <script src="amal/slide_v-2.js"></script>
-<script src="amal/scroll.js"></script>
-<script src="amal/scrallbolls/scrollball.js"></script>
+    <script src="amal/scroll.js"></script>
+    <script src="amal/scrallbolls/scrollball.js"></script>
     <script src="index.js"></script>
 </body>
 
