some changed page donate header

--- a/donate_page.html
+++ b/donate_page.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container" >
-            <div class="header" ">
+            <div class="header">
              <div class="header_main flex" >
                  <div class="header_logo">
                      <img src="./img/header_logo.png" alt="">
@@ -18,10 +18,10 @@
                  <nav>
                      <ul class="header_list flex">
                          <li>
-                             <a href="#">PRODUCTS</a>
+                             <a href="index.html">MENU</a>
                          </li>
                          <li>
-                             <a href="#">FEATURES</a>
+                             <a href="#">CONTACT US</a>
                          </li>
                          <li>
                              <a href="#">RESOURCES</a>
@@ -41,6 +41,12 @@
             </div>
          </div>
     </header>
+
+
+
+    
+
+
     
     <script src="index.js"></script>
 
