added p donate-page

--- a/donate_page.html
+++ b/donate_page.html
@@ -45,7 +45,10 @@
 
 
     <h1 class="donate_title">تواصل مع جمعية العطاء الخيرية.</h1>
-    
+    <p class="donate_parag">Lorem ipsum dolor sit amet, consectetur <br>
+        adipiscing elit. Quisque nec justo finibus, tempus eiden dolor ipsum.</p>
+
+
 
 
     
