--- a/donate_page.html
+++ b/donate_page.html
@@ -47,6 +47,8 @@
     <h1 class="donate_title">تواصل مع جمعية العطاء الخيرية.</h1>
     <p class="donate_parag">Lorem ipsum dolor sit amet, consectetur <br>
         adipiscing elit. Quisque nec justo finibus, tempus eiden dolor ipsum.</p>
+        <img class="donate_img-1" src="img/9d05dd6fbaa8ce08315427adb7d168c7.jpeg" alt="">
+
 
 
 
