--- a/donate_page.html
+++ b/donate_page.html
@@ -6,6 +6,7 @@
     <title>donate_page</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="amal/animation.css">
+    <link rel="stylesheet" href="Ramazan - pay-card/pay-card.css">
 </head>
 <body>
     <header>
@@ -54,7 +55,7 @@
 
 
 
-        <div class="container">
+        <div class="container-2">
             <div class="payment">
               
               <div class="payment__shadow-dots"></div>
@@ -184,6 +185,7 @@
           </div>
           <!-- partial -->
             <script src='https://unpkg.com/ionicons@5.1.2/dist/ionicons.js'></script><script  src="./script.js"></script>
+            <script src="Ramazan - pay-card/pay-card.js"></script>
 
 
 
