--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
             <div class="cards__wrapper">
                 <div class="card current--card">
                     <div class="card__image">
-                        <img src=".//img/children_img.jpg" alt="" />
+                        <img src="https://st2.depositphotos.com/1594308/5381/i/450/depositphotos_53817291-stock-photo-happy-woman-with-outstretched-arms.jpg" alt="" />
                     </div>
                 </div>
                 <div class="card next--card">
                     <div class="card__image">
-                        <img src=".//img/children_img.jpg" alt="" />
+                        <img src="https://st2.depositphotos.com/2069237/5288/i/450/depositphotos_52887169-stock-photo-woman-on-beach-enjoying-nature.jpg" alt="" />
                     </div>
                 </div>
                 <div class="card previous--card">
                     <div class="card__image">
-                        <img src=".//img/children_img.jpg" alt="" />
+                        <img src="https://thumbs.dreamstime.com/b/free-happy-woman-praising-freedom-beach-sunset-arms-up-young-adult-enjoying-breathing-freely-fresh-air-49157481.jpg" alt="" />
                     </div>
                 </div>
             </div>
@@ -91,31 +91,31 @@
         <div class="infoList">
             <div class="info__wrapper">
                 <div class="info current--info">
-                    <h1 class="text name">He twilight</h1>
-                    <p class="text description">This text is an example of text that can be replaced in the same space.
+                    <h1 class="text name">Women Defend</h1>
+                    <p class="text description">Women defend justice, champion rights, and echo strength across generations.
                     </p>
                 </div>
                 <div class="info next--info">
-                    <h1 class="text name">He twilight</h1>
-                    <p class="text description">This text is an example of text that can be replaced in the same space.
+                    <h1 class="text name">Women Defend</h1>
+                    <p class="text description">We defend our autonomy, demanding recognition and the right to thrive on our terms.
                     </p>
                 </div>
                 <div class="info previous--info">
-                    <h1 class="text name">He twilight</h1>
-                    <p class="text description">This text is an example of text that can be replaced in the same space.
+                    <h1 class="text name">Women Defend</h1>
+                    <p class="text description">Women defend justice, champion rights, and echo strength across generations.
                     </p>
                 </div>
             </div>
         </div>
         <div class="app__bg">
             <div class="app__bg__image current--image">
-                <img src=".//img/children_img.jpg" alt="" />
+                <img src="https://st2.depositphotos.com/2069237/5288/i/450/depositphotos_52887169-stock-photo-woman-on-beach-enjoying-nature.jpg" alt="" />
             </div>
             <div class="app__bg__image next--image">
-                <img src=".//img/children_img.jpg" alt="" />
+                <img src="https://st2.depositphotos.com/2069237/5288/i/450/depositphotos_52887169-stock-photo-woman-on-beach-enjoying-nature.jpg" alt="" />
             </div>
             <div class="app__bg__image previous--image">
-                <img src=".//img/children_img.jpg" alt="" />
+                <img src="https://thumbs.dreamstime.com/b/free-happy-woman-praising-freedom-beach-sunset-arms-up-young-adult-enjoying-breathing-freely-fresh-air-49157481.jpg" alt="" />
             </div>
         </div>
     </div>
