--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@
                 </div>
             </div>
 
-            <h1 class="find_title">Let's find the latest <br> news today!</h1>
+            <h1 class="find_title">Information About Us <br> news today!</h1>
 
             <div class="find_tabs_block">
                 <div class="find_tabs">
-                    <div class="find_tab" onclick="find_openTab(event, 'find_tab1')">الكل</div>
-                    <div class="find_tab" onclick="find_openTab(event, 'find_tab2')">Humans</div>
+                    <div class="find_tab" onclick="find_openTab(event, 'find_tab1')">Our photo</div>
+                    <div class="find_tab" onclick="find_openTab(event, 'find_tab2')">Videos</div>
                     <div class="find_tab" onclick="find_openTab(event, 'find_tab3')">Animal</div>
                     <div class="find_tab" onclick="find_openTab(event, 'find_tab4')">Abstract</div>
                     <div class="find_tab" onclick="find_openTab(event, 'find_tab5')">Random</div>
@@ -200,7 +200,7 @@
                 </div>
             </div>
             <div id="find_tab2" class="find_tab-content">
-                <img src="" alt="">
+                <video class="find_tabs_video-2" src="videos/happy womens day-2.mp4" autoplay loop muted></video>
             </div>
             <div id="find_tab3" class="find_tab-content">
 
