--- a/donate_page.html
+++ b/donate_page.html
@@ -45,10 +45,9 @@
 
 
 
-    <h1 class="donate_title">تواصل مع جمعية العطاء الخيرية.</h1>
-    <p class="donate_parag">Lorem ipsum dolor sit amet, consectetur <br>
-        adipiscing elit. Quisque nec justo finibus, tempus eiden dolor ipsum.</p>
-        <img class="donate_img-1" src="img/donate_img-1.jpeg" alt="">
+    <h1 class="donate_title"> Women Defending Freedom</h1>
+    <p class="donate_parag">From boardrooms to streets, women unite to defend dignity and empowerment.</p>
+        <img class="donate_img-1" src="https://images.unsplash.com/photo-1591035897819-f4bdf739f446?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8aGFwcHklMjB3b21lbnxlbnwwfHwwfHx8MA%3D%3D" alt="">
 
 
 
