--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <video class="find_tabs_video-2" src="videos/happy womens day-2.mp4" autoplay loop muted></video>
             </div>
             <div id="find_tab3" class="find_tab-content">
-
+                <video class="find_tabs_video-3" src="videos/Pedigree Dog Commercial - Shelter Dog.mp4" autoplay loop muted></video>
             </div>
             <div id="find_tab4" class="find_tab-content">
 
