--- a/index.html
+++ b/index.html
@@ -206,10 +206,10 @@
                 <video class="find_tabs_video-3" src="videos/Pedigree Dog Commercial - Shelter Dog.mp4" autoplay loop muted></video>
             </div>
             <div id="find_tab4" class="find_tab-content">
-
+                <img class="find_tabs_video-4" src="img/find_img_tabss.png" alt="">
             </div>
             <div id="find_tab5" class="find_tab-content">
-
+                <video class="" src=""></video>
             </div>
 
         </div>
